--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -6,16 +6,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.18</version>
-		<relativePath/>
+		<groupId>com.fengcastelo</groupId>
+		<artifactId>microservices-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>f
 	</parent>
 
-	<groupId>com.fengcastelo</groupId>
 	<artifactId>hr-worker</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-
 	<name>hr-worker</name>
 	<description>Worker Microservice</description>
 
