--- a/hr-payroll/src/main/resources/application.yml
+++ b/hr-payroll/src/main/resources/application.yml
@@ -11,6 +11,11 @@ server:
         hr-worker:
           - uri: http://localhost:8001
 
+            eureka:
+              client:
+                service-url:
+                  defaultZone=http://localhost:8761/eureka:
+
 logging:
   level:
     org.springframework.cloud.loadbalancer: DEBUG
