--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -9,7 +9,7 @@
 		<groupId>com.fengcastelo</groupId>
 		<artifactId>microservices-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>f
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>hr-worker</artifactId>
@@ -53,6 +53,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
