--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
