--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>hr-worker</module>
         <module>hr-payroll</module>
+        <module>hr-eureka-server</module>
+        <module>ms-api-gateway</module>
     </modules>
 
     <properties>
