--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -61,6 +61,11 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
