--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>hr-eureka-server</module>
         <module>ms-api-gateway</module>
         <module>ms-config-server</module>
+        <module>hr-user</module>
     </modules>
 
     <properties>
